# graincluster

./: CLAUDE.md  README.md  agents.md  graincluster_implementation_plan.md  optimizer_report.md  parameterized_model_plan.md  pyproject.toml
.agents/test/: run_sic_tau0_normalized.py
src/graincluster/: __init__.py
src/graincluster.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/graincluster/features/: __init__.py  binning.py  species.py
src/graincluster/graph/: __init__.py  builder.py  edge.py
src/graincluster/model/: __init__.py  cluster.py  entropy.py  parameterized.py  partition.py
src/graincluster/optimizer/: __init__.py  greedy.py  louvain.py  profiling.py
tests/: conftest.py  test_binning.py  test_entropy.py  test_integration.py  test_louvain.py  test_moves.py  test_optimizer.py  test_parameterized.py
