[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graincluster"
version = "0.1.0"
description = "MDL-style phase-pocket and grain-boundary segmentation for atomistic simulations."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Lucas Steinberger" }
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "graphcluster>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
